// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortingOptions when sorting field is flight number renders sorting options with flight number specific text 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={8}
>
  <WithStyles(Grid)
    item={true}
  >
    <TextField
      SelectProps={
        Object {
          "name": "sortField",
          "native": true,
        }
      }
      id="sort-field"
      label="Sort field"
      margin="normal"
      onChange={[Function]}
      required={false}
      select={true}
      value="flightNumber"
      variant="outlined"
    >
      <option
        value="flightNumber"
      >
        flight number
      </option>
      <option
        value="utcDate"
      >
        utc date
      </option>
    </TextField>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <TextField
      SelectProps={
        Object {
          "name": "sortOrder",
          "native": true,
        }
      }
      id="sort-order"
      label="Sort order"
      margin="normal"
      onChange={[Function]}
      required={false}
      select={true}
      value="desc"
      variant="outlined"
    >
      <option
        value="asc"
      >
        smaller to bigger
      </option>
      <option
        value="desc"
      >
        bigger to smaller
      </option>
    </TextField>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`SortingOptions when sorting field is utc date renders sorting options with date specific text 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={8}
>
  <WithStyles(Grid)
    item={true}
  >
    <TextField
      SelectProps={
        Object {
          "name": "sortField",
          "native": true,
        }
      }
      id="sort-field"
      label="Sort field"
      margin="normal"
      onChange={[Function]}
      required={false}
      select={true}
      value="utcDate"
      variant="outlined"
    >
      <option
        value="flightNumber"
      >
        flight number
      </option>
      <option
        value="utcDate"
      >
        utc date
      </option>
    </TextField>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <TextField
      SelectProps={
        Object {
          "name": "sortOrder",
          "native": true,
        }
      }
      id="sort-order"
      label="Sort order"
      margin="normal"
      onChange={[Function]}
      required={false}
      select={true}
      value="desc"
      variant="outlined"
    >
      <option
        value="asc"
      >
        old to new
      </option>
      <option
        value="desc"
      >
        new to old
      </option>
    </TextField>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;
